# DuckieMapTools

./: .gitignore  .gitmodules  README.md  meson.build  premake5.lua
DuckCSG/: Brush.cpp  Brush.h  Core.h  DuckCSGpch.cpp  Entity.cpp  Entity.h  Log.cpp  Log.h  Main.cpp  MapParser.cpp  MapParser.h  Plane.cpp  Plane.h  Polygon.cpp  Polygon.h  duckpch.cpp  duckpch.h
DuckCSG/Tests/: Test01_parseOneBrush.cpp  Test02_validateSimplePolygons.cpp  Test03_validateWithQuirkyAngles.cpp  Tests.h  test01_fail.map  test02_box.map  test03_invalid_intersection.map  test04_csg_basic.map
scripts/: run.sh
subprojects/stb_image/: meson.build
